welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:20: error: not found: value faux
  } while(vuBiscuit==faux)
                     ^